화면 작업 (메인 화면 세팅, 회원가입시 ajax 사용)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>STDUY</title>
+    <title>STUDY</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script th:inline="javascript">
-        function onClick() {
-            alert("회원가입!");
-        }
-    </script>
-
 </head>
 
 <body>
